--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,7 @@
   register: solr_path
 
 - name: Download Solr
-  get_url: url=http://archive.apache.org/dist/lucene/solr/{{ solr_version }}/solr-{{ solr_version }}.tgz dest=/tmp/solr-{{ solr_version }}.tgz
+  get_url: url={{ solr_download_url }} dest=/tmp/solr-{{ solr_version }}.tgz
   when: solr_path.stat.exists == False
 
 - name: Extract Solr
