--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "tests/roles/docker"]
 	path = tests/roles/docker
 	url = https://github.com/kevincoakley/ansible-role-docker.git
+[submodule "tests/roles/facter"]
+	path = tests/roles/facter
+	url = https://github.com/kevincoakley/ansible-role-facter.git
+[submodule "tests/roles/zookeeper"]
+	path = tests/roles/zookeeper
+	url = https://github.com/kevincoakley/ansible-role-zookeeper.git
