--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,9 @@
 ---
 - name: reload systemd
-  command: systemctl daemon-reload
+  systemd:
+    daemon_reload: yes
 
 - name: restart solr
-  service: name=solr state=restarted
+  systemd:
+    name: solr
+    state: restarted
