--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,33 +3,58 @@
   include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Install common packages
-  package: name={{ item }}
+  package:
+    name: "{{ item }}"
   with_items: "{{ solr_packages }}"
 
 - name: Create the solr group
-  group: name=solr state=present system=yes
+  group:
+    name: solr
+    state: present
+    system: yes
 
 - name: Create the solr user
-  user: name=solr groups=solr append=yes
+  user:
+    name: solr
+    groups: solr
+    append: yes
 
 - name: Check if the version of Solr already exists
-  stat: path=/opt/solr-{{ solr_version }}
+  stat:
+    path: "/opt/solr-{{ solr_version }}"
   register: solr_path
 
 - name: Download Solr
-  get_url: url={{ solr_download_url }} dest=/tmp/solr-{{ solr_version }}.tgz
+  get_url:
+    url: "{{ solr_download_url }}"
+    dest: "/tmp/solr-{{ solr_version }}.tgz"
   when: solr_path.stat.exists == False
 
 - name: Extract Solr
-  unarchive: src=/tmp/solr-{{ solr_version }}.tgz dest=/opt copy=no owner=solr group=solr
+  unarchive:
+    src: "/tmp/solr-{{ solr_version }}.tgz"
+    dest: /opt
+    copy: no
+    owner: solr
+    group: solr
   when: solr_path.stat.exists == False
 
 - name: Create a symlink for /opt/solr
-  file: src=/opt/solr-{{ solr_version }} dest=/opt/solr owner=solr group=solr state=link
+  file:
+    src: "/opt/solr-{{ solr_version }}"
+    dest: /opt/solr
+    owner: solr
+    group: solr
+    state: link
   when: solr_path.stat.exists == False
 
 - name: Create the Solr home dir
-  file: path={{ solr_home }} state=directory owner=solr group=solr mode=0755
+  file:
+    path: "{{ solr_home }}"
+    state: directory
+    owner: solr
+    group: solr
+    mode: 0755
 
 - name: Copy the solr config to the solr home directory
   copy:
@@ -48,10 +73,18 @@
     mode: 0400
 
 - name: Create the Solr systemd service file
-  template: src=solr.service.j2 dest=/etc/systemd/system/solr.service owner=solr group=solr mode=0644
-  notify: 
+  template:
+    src: solr.service.j2
+    dest: /etc/systemd/system/solr.service
+    owner: solr
+    group: solr
+    mode: 0644
+  notify:
   - reload systemd
   - restart solr
 
 - name: Ensure Solr is started and enabled on boot
-  service: name=solr state=started enabled=yes
+  systemd:
+    name: solr
+    state: started
+    enabled: yes
