Create zookeeper chroot on cluster configs if the chroot isn't present

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ solr_version: 6.5.0
 solr_cluster: False
 solr_download_url: http://archive.apache.org/dist/lucene/solr/{{ solr_version }}/solr-{{ solr_version }}.tgz
 solr_zookeeper_connect_string:
+solr_zookeeper_chroot: /solr
 solr_home: /mnt/solr/solr
 solr_port: 8983
 solr_memory: 512m
