Set default version to 8.2.0, lint fixes, made the solr service user and group a variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,11 @@
 ---
-solr_version: 7.2.0
-solr_cluster: False
+solr_version: 8.2.0
+solr_cluster: false
 solr_download_url: http://archive.apache.org/dist/lucene/solr/{{ solr_version }}/solr-{{ solr_version }}.tgz
 solr_zookeeper_connect_string:
 solr_zookeeper_chroot: /solr
 solr_home: /mnt/solr/solr
 solr_port: 8983
 solr_memory: 512m
+solr_service_group: solr
+solr_service_username: solr
