--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,16 +1,36 @@
 ---
 galaxy_info:
+  role_name: solr
   author: Kevin Coakley
   description: Apache Lucene Solr
-  license: license (GPLv2, CC-BY, etc)
-  min_ansible_version: 2.2
+
+  # If the issue tracker for your role is not on github, uncomment the
+  # next line and provide a value
+  # issue_tracker_url: http://example.com/issue/tracker
+
+  # Some suggested licenses:
+  # - BSD (default)
+  # - MIT
+  # - GPLv2
+  # - GPLv3
+  # - Apache
+  # - CC-BY
+  license: BSD
+
+  min_ansible_version: 2.5
+
+  #
+  # platforms is a list of platforms, and each platform has a name and a list of versions.
+  #
   platforms:
-  - name: EL
-    versions:
-    - 7
-  - name: Ubuntu
-    versions:
-    - xenial
-  categories:
-  - database
+    - name: EL
+      versions:
+        - 7
+    - name: Ubuntu
+      versions:
+        - bionic
+
+  galaxy_tags:
+    - database
+
 dependencies: []
