Support Java 8 and 11

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,9 @@ solr_port: 8983
 solr_memory: 512m
 solr_service_group: solr
 solr_service_username: solr
+
+# Supported Java Versions:
+# CentOS 7: 11, 8, or 7
+# Ubuntu 18.04: 11 or 8
+solr_java_version: 8
+solr_java_install: true
