--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,5 +1,8 @@
 ---
 solr_packages:
-  - java-1.8.0-openjdk-headless
   - lsof
   - unzip
+solr_java_package:
+  11: java-11-openjdk-headless
+  8: java-1.8.0-openjdk-headless
+  7: java-1.7.0-openjdk-headless
