--- a/molecule/cluster/converge.yml
+++ b/molecule/cluster/converge.yml
@@ -4,23 +4,13 @@
   become: true
 
   vars:
-    - zookeeper_java_version: 11
+    - zookeeper_java_version: "{{ lookup('env','JAVA_VERSION') | default('11') }}"
     - zookeeper_ansible_host_group: solr
     - zookeeper_server_variable: facter_ipaddress
-    - solr_java_version: 11
+    - solr_java_version: "{{ lookup('env','JAVA_VERSION') | default('11') }}"
     - solr_cluster: true
     - solr_zookeeper_connect_string: "{{ facter_ipaddress }}:2181"
 
   roles:
     - role: kevincoakley.zookeeper
     - role: ansible-role-solr
-
-  post_tasks:
-    - name: Give the Solr time to start
-      pause:
-        seconds: 30
-
-    - name: Verify that Solr is running on port 8983
-      uri:
-        url: http://127.0.0.1:8983/solr/
-        status_code: 200
