--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,10 +3,11 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
-  options:
-    config-file: molecule/default/yaml-lint.yml
+lint: |
+  set -e
+  yamllint -c molecule/yaml-lint.yml .
+  ansible-lint
+  flake8
 platforms:
   - name: instance
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest"
@@ -23,10 +24,11 @@ platforms:
       - solr
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
+  log: false
+  options:
+    vvv: false
   playbooks:
-    converge: ${MOLECULE_PLAYBOOK:-playbook.yml}
+    converge: ${MOLECULE_PLAYBOOK:-converge.yml}
   inventory:
     host_vars:
       instance:
@@ -34,6 +36,4 @@ provisioner:
 scenario:
   name: default
 verifier:
-  name: testinfra
-  lint:
-    name: flake8
+  name: ansible
