--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -3,6 +3,7 @@ solr_packages:
   - lsof
   - unzip
 solr_java_package:
-  11: java-11-openjdk-headless
-  8: java-1.8.0-openjdk-headless
-  7: java-1.7.0-openjdk-headless
+  latest: java-latest-openjdk-headless
+  "11": java-11-openjdk-headless
+  "8": java-1.8.0-openjdk-headless
+  "7": java-1.7.0-openjdk-headless
