--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -7,6 +7,12 @@
     recurse: true
   when: ansible_distribution == 'Ubuntu'
 
+- name: Run "apt-get update"
+  apt:
+    update_cache: true
+  retries: 5
+  delay: 5
+
 - name: fail on unsupported java version (18.04)
   fail:
     msg: "Java version must be 8 or 11"
